--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 
 # dependencies
 /node_modules
+/server/node_modules
 /.pnp
 .pnp.js
+/server/txt files
 
 # testing
 /coverage
@@ -21,3 +23,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vscode
+README.md
