--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# temperary
+/server
+
 # dependencies
 /node_modules
 /server/node_modules
@@ -25,3 +28,4 @@ yarn-debug.log*
 yarn-error.log*
 .vscode
 README.md
+.prettierrc
