--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ecom-web",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Book Recommendation Website",
+  "author": "Shubham Jain",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,13 +13,47 @@
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "debug": "^4.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.7",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build-fd": "react-scripts build",
+    "test-fd": "react-scripts test",
+    "eject-fd": "react-scripts eject",
+    "transpile-bd": "babel server/src/ --out-dir dist-server/",
+    "remove-bd": "rimraf dist-server",
+    "serve-bd": "nodemon dist-server",
+    "handle-bd": "node dist-server/index.js",
+    "convert-this-bd": "npm-run-all remove-bd transpile-bd handle-bd",
+    "start-bd": "npm-run-all remove-bd transpile-bd serve-bd"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "10"
+          }
+        }
+      ]
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
