Login and jwt is added

--- a/package.json
+++ b/package.json
@@ -1,59 +1,43 @@
 {
-  "name": "ecom-web",
-  "version": "1.0.0",
+  "name": "next-book",
+  "version": "0.1.0",
   "description": "Book Recommendation Website",
   "author": "Shubham Jain",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@babel/cli": "^7.12.17",
+    "@babel/core": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
     "axios": "^0.21.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.14.0",
-    "react-animated-css": "^1.2.1",
-    "react-dom": "^16.14.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "debug": "^4.2.0",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.7",
+    "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "rimraf": "^3.0.2",
-    "validator": "^13.1.17"
+    "scripts": "^0.1.0",
+    "validator": "^13.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-fd": "react-scripts build",
-    "test-fd": "react-scripts test",
-    "eject-fd": "react-scripts eject",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "transpile-bd": "babel server/src/ --out-dir dist-server/",
     "remove-bd": "rimraf dist-server",
     "serve-bd": "nodemon dist-server",
     "handle-bd": "node dist-server/index.js",
     "convert-this-bd": "npm-run-all remove-bd transpile-bd handle-bd",
     "start-bd": "npm-run-all remove-bd transpile-bd serve-bd"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "10"
-          }
-        }
-      ]
-    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -69,5 +53,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "10"
+          }
+        }
+      ]
+    ]
+  },
+  "proxy": "http://localhost:4000"
 }
