--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "caniuse-lite": "^1.0.30001257",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
@@ -15,19 +16,24 @@
     "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
     "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "scripts": "^0.1.0",
+    "serve": "^12.0.1",
     "validator": "^13.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "prod": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-bd": "nodemon server/index.js"
+    "dev-bd": "nodemon server/index.js",
+    "prod-bd": "node server/index.js",
+    "start": "run-p dev dev-bd"
   },
   "eslintConfig": {
     "extends": "react-app"
