--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/dist-server
-
+/server/node_modules
+/nextnewbook/
 # dependencies
 /node_modules
 
@@ -13,7 +13,7 @@
 /coverage
 
 # production
-# /build
+/build
 
 # misc
 .DS_Store
