--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 /server/node_modules
-/nextnewbook/
 # dependencies
 /node_modules
 
@@ -14,7 +13,7 @@
 
 # production
 /build
-
+testjs.js
 # misc
 .DS_Store
 .env.local
@@ -28,3 +27,4 @@ yarn-error.log*
 .vscode
 README.md
 .prettierrc
+.env
