--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/server/node_modules
-# dependencies
 /node_modules
+# dependencies
+/react-ui/node_modules
 
 /.pnp
 .pnp.js
